# koral

./: .gitignore  LICENSE.txt  Makefile  README.md  setup.cfg
examples/basic/: index.html  main.py
src/js/: koral.py  script.js  sw.js  worker.js
src/py/: interface.py  sock.py
