[metadata]
name = koral
version = 0.0.2
author = Cole Wilson
author_email = cole@colewilson.xyz
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cole-wilson/koral
project_urls =
    Bug Tracker = https://github.com/cole-wilson/koral/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = python
